--- a/Modelisation/Modelisation.vcxproj
+++ b/Modelisation/Modelisation.vcxproj
@@ -120,6 +120,10 @@
     <ClInclude Include="Graphe\Maillon.h" />
     <ClInclude Include="Graphe\Sommet.h" />
     <ClInclude Include="Main\Erreur.h" />
+    <ClInclude Include="Outils\ChargerGraphe.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Main\Main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
