Toute mension d'arêtes -> arcs
Nettoyage de graphe.h, on n'a pas besoin des fonctions de dessin

--- a/Modelisation/Modelisation.vcxproj
+++ b/Modelisation/Modelisation.vcxproj
@@ -115,7 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Graphe\Arete.h" />
+    <ClInclude Include="Graphe\Arc.h" />
     <ClInclude Include="Graphe\Graphe.h" />
     <ClInclude Include="Graphe\Maillon.h" />
     <ClInclude Include="Graphe\Sommet.h" />
