--- a/Modelisation/Modelisation.vcxproj
+++ b/Modelisation/Modelisation.vcxproj
@@ -116,12 +116,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Algorithmes\Dijkstra.h" />
+    <ClInclude Include="Algorithmes\ParcoursDFS.h" />
     <ClInclude Include="Graphe\ElementsGraphe.h" />
     <ClInclude Include="Graphe\Graphe.h" />
     <ClInclude Include="Graphe\Maillon.h" />
     <ClInclude Include="Main\Erreur.h" />
     <ClInclude Include="Outils\ChargerGraphe.h" />
-    <ClInclude Include="Parcours\ParcoursDFS.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main\Main.cpp" />
